bugfix: added default customization theme for anchor elements to fix unreadable link texts.

--- a/source/css/leviathan.css
+++ b/source/css/leviathan.css
@@ -35,21 +35,15 @@ body {
     gap: 1rem;
 }
 
-.main-body-wrapper {
+.main-body-wrapper {}
 
-}
-
-.main-footer-wrapper {
-
-}
+.main-footer-wrapper {}
 
 
 
 /* Index */
 
-.main-landing-page-container {
-    
-}
+.main-landing-page-container {}
 
 .main-landing-page-container {
     font-family: 'Bungee Hairline', Arial;
@@ -93,7 +87,8 @@ body {
     align-items: center;
     padding-top: 5rem;
     font-family: 'Bungee Hairline', Arial;
-    font-size: 36px;;
+    font-size: 36px;
+    ;
 }
 
 .navbar-item {
@@ -145,10 +140,16 @@ body {
 /* Archives */
 .main-archives-container {
     color: white;
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
 }
 
 .main-archive-list-container {
     order: 2;
+    border-left: 2px solid white;
+    padding-left: 2rem;
 }
 
 .archive-list-year {
@@ -193,9 +194,59 @@ body {
     text-decoration: underline;
 }
 
+.archive-post-container {}
 
+.archive-post-item {
+    font-family: "Source Sans Pro";
+    color: white;
+    padding-bottom: 0.25rem;
+    position: relative;
+    background: black;
+}
+
+.archive-post-item:after {
+    padding:0;
+    margin:0;
+    content: "";
+    width:50%;
+    height:2px;/* slight higher to work around rounding errors(?) on some zoom levels in some browsers. */
+    background-color:white;
+    position: absolute;
+    left: 0;
+    bottom:-1rem;
+    margin-bottom: 1rem;
+}
+
+.archive-post-item-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.archive-post-date {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.archive-post-item-teaser {
+    width: 750px;
+    text-overflow: ellipsis;
+    font-weight: lighter;
+    text-decoration: none;
+}
+
+.archvie-post-item-teaser {
+    text-decoration: none !important;
+}
+
+.archive-post-readmore-headline {
+    font-size: 20px;
+}
+
+.archive-post-readmore-anchor {
+}
 
 @media only screen and (max-width: 1024px) {
+
     .lightnav-title,
     .lightnav-logo-container {
         width: 100%;
@@ -205,4 +256,3 @@ body {
 /* @media only screen and (min-width:  480px) {} */
 /* @media only screen and (max-width:  1024px) {} */
 /* @media only screen and (max-width:  1200px) {} */
-
